<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/container_large"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_catalog_image"
            android:layout_width="@dimen/container_large"
            tools:background="@color/colorBlackTint70"
            android:scaleType="centerInside"
            android:layout_height="@dimen/container_large" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/margin_regular"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_catalog_title"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/text_header"
                android:textColor="@color/colorBlack"
                tools:text="@string/ticket_title"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/card_catalog_info_1"
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlackTint70"
                android:textSize="@dimen/text_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_info" />

            <TextView
                android:id="@+id/card_catalog_info_2"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_small"
                android:textColor="@color/colorBlackTint70"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_info" />

            <TextView
                android:id="@+id/card_catalog_inventory"
                android:layout_width="match_parent"
                android:textColor="@color/colorSecondary"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/margin_small"
                android:gravity="bottom"
                tools:text="@string/catalog_inventory"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/dashed"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="@dimen/container_xlarge"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_catalog_buy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="@string/catalog_buy_for"
                android:textSize="@dimen/text_header"
                android:gravity="center"
                android:textColor="@color/colorSecondaryDark"
                android:background="@drawable/ripple"
                android:clickable="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/dashed"
                android:layerType="software" />

            <TextView
                android:id="@+id/card_catalog_sell"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:text="@string/catalog_sell_for"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_header"
                android:textColor="@color/colorSecondaryDark"
                android:background="@drawable/ripple"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>