<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/margin_regular"
    android:layout_marginRight="@dimen/margin_regular"
    android:layout_marginBottom="@dimen/margin_regular"
    android:id="@+id/card_view_events"
    android:layout_width="match_parent"
    android:layout_height="@dimen/container_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_events_image_url"
            android:layout_width="@dimen/container_large"
            tools:background="@color/colorBlackTint70"
            android:scaleType="centerInside"
            android:layout_height="@dimen/container_large" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_events_title"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_header"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/priceRange"/>

            <TextView
                android:id="@+id/card_events_info_1"
                android:textSize="@dimen/text_small"
                android:textColor="@color/colorBlackTint70"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_info" />


            <TextView
                android:id="@+id/card_events_tickets_left"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:paddingBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:textColor="@color/colorSecondary"
                android:text="@string/events_tickets_left" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/dashed"
            android:layerType="software" />

        <LinearLayout
            android:layout_width="@dimen/container_xlarge"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/colorSecondaryAccent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_events_date"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_body"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_info" />

            <TextView
                android:id="@+id/card_events_time"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="@dimen/text_body"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                tools:text="@string/ticket_info" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

